# Lima-camera-princeton

./: CMakeLists.txt  Makefile  README.md  pom_64_Win7_shared.xml
cmake/: FindPicam.cmake
doc/: index.rst
include/: .gitignore  PrincetonBinCtrlObj.h  PrincetonCompatibility.h  PrincetonDetInfoCtrlObj.h  PrincetonException.h  PrincetonInterface.h  PrincetonRoiCtrlObj.h  PrincetonShutterCtrlObj.h  PrincetonSyncCtrlObj.h
python/: __init__.py
sdk/include/: picam.h
sdk/lib/: Picam.lib  Picam32.lib
sip/: PrincetonInterface.sip
src/: PrincetonBinCtrlObj.cpp  PrincetonDetInfoCtrlObj.cpp  PrincetonException.cpp  PrincetonException.h  PrincetonInterface.cpp  PrincetonRoiCtrlObj.cpp  PrincetonShutterCtrlObj.cpp  PrincetonSyncCtrlObj.cpp
tango/: CMakeLists.txt  Princeton.py
